More swift buckets

--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -200,7 +200,8 @@ $wgLocalFileRepo  =  array(
     'public' => ['container' => 'public', 'url' => '<%= @swift_storage_url %>/<%= @swift_namespace %>-public'],
     'thumb' => ['container' => 'thumb', 'url' => '<%= @swift_storage_url %>/<%= @swift_namespace %>-thumb'],
     'temp' => ['container' => 'temp', 'url' => '<%= @swift_storage_url %>/<%= @swift_namespace %>-temp'],
-    'deleted' => ['container' => 'deleted'],
+    'archive' => ['container' => 'archive', 'url' => '<%= @swift_storage_url %>/<%= @swift_namespace %>-archive'],
+    'deleted' => ['container' => 'deleted', 'url' => '<%= @swift_storage_url %>/<%= @swift_namespace %>-deleted'],
   ],
   'hashLevels'        => 2,
   'deletedHashLevels' => 0,
