--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -60,8 +60,8 @@ $wgEnableEmail = <%= @email_enabled %>;
 $wgEnableUserEmail = <%= @email_user %>; # UPO
 
 $wgEmergencyContact = "<%= @admin_email %>";
-$wgPasswordSender = "<%= @admin_email %>";
-$wgNoReplyAddress = "<%= @admin_email %>";
+$wgPasswordSender = "<%= @noreply_email %>";
+$wgNoReplyAddress = "<%= @noreply_email %>";
 
 $wgEnotifUserTalk = true; # UPO
 $wgEnotifWatchlist = true; # UPO
