Visual Editor is not currently broken for private wikis, just not well documented

--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -130,6 +130,8 @@ $wgRightsIcon = "";
 # Path to the GNU diff3 utility. Used for conflict resolution.
 $wgDiff3 = "/usr/bin/diff3";
 
+# Do not require RESTBase for VisualEditor.
+$wgVisualEditorAllowLossySwitching = false;
 
 <% @group_perms.each do |group, content| -%>
 <% content.each do |perm, val| -%>
