--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -50,8 +50,7 @@ $wgServer = "https://<%= @server_name %>";
 ## The URL path to static resources (images, scripts, etc.)
 $wgResourceBasePath = '<%= @resource_path %>';
 
-## The URL paths to the logo.  Make sure you change this from the default,
-## or else you'll overwrite your logo when you upgrade!
+$wgFavicon = '<%= @favicon_path %>';
 $wgLogos = [ '1x' => "<%= @logo_path %>" ];
 
 ## UPO means: this is also a user preference option
