Configure file extensions

--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -90,6 +90,7 @@ $wgImageMagickConvertCommand = "/usr/bin/convert";
 
 $wgUploadDirectory = "<%= @upload_dir_real %>";
 $wgUploadPath = "<%= @upload_dir %>";
+$wgFileExtensions = [<%= @file_exts %>];
 
 # InstantCommons allows wiki to use images from https://commons.wikimedia.org
 $wgUseInstantCommons = false;
