parser cache expiry

--- a/templates/opt/mediawiki/docroot/LocalSettings.php.erb
+++ b/templates/opt/mediawiki/docroot/LocalSettings.php.erb
@@ -81,6 +81,7 @@ $wgDBmwschema = "mediawiki";
 $wgMainCacheType = <%= @cache_type %>;
 $wgParserCacheType = <%= @parser_cache_type %>;
 $wgMemCachedServers = [<%= @memcached_servers_list %>];
+$wgParserCacheExpireTime = <%= @parser_cache_expiry %>;
 
 ## To enable image uploads, make sure the 'images' directory
 ## is writable, then set this to true:
